# ai-agent

./: .gitignore  Modelfile  README.md  backup  pyproject.toml
.agents/skills/knowledge-base-ops/: SKILL.md
.agents/skills/knowledge-base-ops/scripts/: kb_ingest_advanced.py  kb_reset.py  kb_search_test.py  kb_status.py
extra/: L5.ipynb  helper.py
src/agents/: agent_client.py  client.py  intent.py
src/agents/api/: main.py
src/agents/core/: config.py
src/agents/router/: intent.py
src/data/: agent_core.db  init_db.py
src/data/chroma_db/: chroma.sqlite3
src/data/vector_db/: chroma.sqlite3
src/knowledge/: 报销政策.md
src/mcp_server/: mcp_manager.py  mcp_server_knowledge.py  mcp_server_search.py
src/scripts/: ingest_docs.py
src/server/: manager.py  mcp_server_common.py  mcp_server_fetch.py  mcp_server_knowledge.py  weather_server.py
src/server/src/data/chroma_db/: chroma.sqlite3
src/utils/: intent_router.py  logger.py
