[tool.poetry]
name = "ai_agent"
version = "0.1.0"
description = "MCP server and client example"
authors = ["Yanqing <yanqing@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.27"
openai = "^2.41"
dotenv = "^0.9"
fastapi = "^0.136.3"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
pydantic-settings = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
