[tool.poetry]
name = "ai_agent"
version = "0.1.0"
description = "MCP server and client example"
authors = ["Yanqing <yanqing@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
mcp = "^1.27.2"
openai = "^2.41.1"
dotenv = "^0.9.9"
fastapi = "^0.136.3"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
pydantic-settings = "^2.14.1"
markdownify = "^1.2.2"
readabilipy = "^0.3.0"
protego = "^0.6.1"
ddgs = "^9.14.4"
sentence-transformers = "^5.6.0"
chromadb = "^1.5.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
